Added a new Demo Button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
         </div>
         
         <!-- Showcase -->
+		 <div style="display: flex; justify-content: center; margin: 32px 0;">
+    <a href="https://suryatheengineer.github.io/Grill-Fires/" style="
+        display: inline-block;
+        padding: 24px 48px;
+        font-size: 2rem;
+        background: #ec2009;
+        color: #fff;
+        border-radius: 12px;
+        text-decoration:none;
+        font-weight: bold;
+        box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+        transition: background 0.2s;
+        text-align: center;
+    " onmouseover="this.style.background='#c0392b'" onmouseout="this.style.background='#e74c3c'">
+        DEMO
+    </a>
+</div>
         <div class="showcase">
 
 			<a href="/projects/Grill Fires/index.html">
